# squad-layer-voting-editor

./: .gitignore  App_Utils.py  Export_Config_Settings.py  FUT_Utils.py  Import_Config_Settings.py  LFUT.csv  LFUT_from_json.ipynb  LFUT_from_json.py  README.md  Taskfile.yml  app.py  pyproject.toml
.github/workflows/: update-lfut.yml
app_pages/: download_page.py  gamemode_page.py  global_page.py  home_page.py  import_page.py  layer_page.py  map_page.py
pages/: download_page.py  gamemode_page.py  global_page.py  home_page.py  import_page.py  layer_page.py  map_page.py
